--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb+srv://rohitsingh080403_db_user:neLnOALpcL0Vp7pi@cluster0.rhavou5.mongodb.net/?appName=Cluster0
-TELEGRAM_BOT_TOKEN=your_bot_token_here
+TELEGRAM_BOT_TOKEN=8584552462:AAGHV9AMCTcOAkxppGjfNO5MrpkIM1oZhoM
 # rohitsingh080403_db_user
 # neLnOALpcL0Vp7pi
